# soundscape-mm

./: CMakeLists.txt  Makefile  README.md  plugin.json
.github/workflows/: build-metamodule-plugin.yml  build.yml
src/: Skyline.cpp  Soundscape.cpp  plugin.cpp  plugin.hpp
src/widgets/: KnobBase.hpp  PanelTheme.hpp
